--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,14 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+  <%= f.label :title %><br>
+  <%= f.text_field :title %><br>
+  <%= f.label :ingredients %><br>
+  <%= f.fields_for :ingredients do |i| %><br>
+
+    <%= i.label :quantity %><br>
+    <%= i.text_field :quantity %><br>
+    <%= i.label :name %><br>
+    <%= i.text_field :name %><br>
+
+  <% end %>
+  <%= f.submit %>
+<% end %>
