--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,18 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+	<%= f.label :title %>
+  <%= f.text_field :title %>
+  <br><br>
+  <ul>
+    <%= f.fields_for :ingredients do |i| %>
+    <br>
+      <li>
+      <%= i.label :name %>
+      <%= i.text_field :name %><br>
+
+      <%= i.label :quantity %>
+      <%= i.text_field :quantity %><br>
+      </li>
+    <% end %>
+  </ul>
+  <%= f.submit %>
+<% end %>
