--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,10 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Title: <%= f.text_field :title %><br>
+  Ingredients: <%= f.fields_for :ingredients do |ing| %>
+	  <%= ing.label :name %><br>
+	  <%= ing.text_field :name %><br>
+	  <%= ing.label :quantity %><br>
+	  <%= ing.text_field :quantity %><br>
+	 <% end %>
+	<%= f.submit %>
 <% end %>
