--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,12 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+  <%= f.text_field :title %>
+  <%= f.fields_for :ingredients do |addr| %>
+    <%= addr.label :name %>
+    <%= addr.text_field :name %>
+
+    <%= addr.label :quantity %>
+    <%= addr.text_field :quantity %>
+
+  <% end %>
+  <%= f.submit %>
+<% end %>
