--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,25 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+
+  <%= f.label :title %> 
+  <%= f.text_field :title %>
+
+  <br>
+  
+  <h3> Ingredients: </h3>
+
+    <%= fields_for :ingredients do |i| %>
+
+    <li>
+
+      <%= i.label :name %>
+      <%= i.text_field :name %>
+      <br>
+      <%= i.label :quantity %>
+      <%= i.text_field :quantity %>
+      
+    </li>
+
+    <% end %>
+
+  <%= f.submit %>
 <% end %>
