--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,10 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  <%= f.fields_for :ingredients do |ingredient| %>
+    <p><%= ingredient.label :name %></p>
+    <p><%= ingredient.text_field :name %></p>
+    <p><%= ingredient.label :quantity %></p>
+    <p><%= ingredient.text_field :quantity %></p>
+  <% end %>
+  <%= f.submit "commit" %> 
 <% end %>
