--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,15 @@
-<%= form_for @recipe do |f| %>
+<%= form_for(setup_recipe @recipe) do |f| %>
+  <%= f.label :title %>
   Title: <%= f.text_field :title %>
+
+  <%=f.fields_for :ingredients do |ing|%>
+    <%=ing.label :name %>
+    <%=ing.text_field :name %><br />
+
+    <%=ing.label :quantity %>
+    <%=ing.text_field :quantity %><br />
 <% end %>
+
+    
+  <%= f.submit %>
+<%end%>
