--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,15 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Title: <%= f.text_field :title %><br  />
+  <h3><%= f.label :ingredients %>: </h3> <br  />
+
+  <%= f.fields_for :ingredients do |ing|%>
+    Ingredient:<br  />
+    <%= ing.label :name %>:
+    <%= ing.text_field :name %>
+    <%= ing.label :quantity %>:
+    <%= ing.text_field :quantity %> <br  />
+
+  <% end %>
+
+  <%= f.submit "Create recipe" %>
 <% end %>
