--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,15 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Title: <%= f.text_field :title %> <br><br>
+
+  <%= f.fields_for :ingredients do |ingredient_field| %>
+    <li>
+      <%= ingredient_field.label :quantity %>:
+      <%= ingredient_field.text_field :quantity %>
+
+      <%= ingredient_field.label :name %>:
+      <%= ingredient_field.text_field :name %>
+    </li>
+  <% end %>
+  <br><br>
+  <%= f.submit %>
 <% end %>
