--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,14 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  <br></br>
+  <%= f.fields_for :ingredients do |ing| %>
+  <li>
+  <%= ing.label :name %>
+  <%= ing.text_field :name %>
+  <%= ing.label :quantity %>
+  <%= ing.text_field :quantity %>
+  </li>
+  <%end%>
+  <br></br>
+  <%= f.submit %>
 <% end %>
