--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,13 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Title: <%= f.text_field :title %><br /><br />
+  <%= f.label :ingredients %><br />
+  <%= f.fields_for :ingredients do |ingred| %>
+    <li>
+    <%= ingred.label :quantity %>
+    <%= ingred.text_field :quantity %>
+    <%= ingred.label :name %>
+    <%= ingred.text_field :name %>
+    </li>
+  <% end %>
+  <%= f.submit %>
 <% end %>
