--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,25 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+
+  <%= f.label :title %>
+  <%= f.text_field :title %>
+
+  <br><br>
+  <%= f.label :ingredients, "Ingredients:" %>
+  <br><br>
+  <%= f.fields_for :ingredients do |i| %>
+    <%= i.label :quantity %>
+    <%= i.text_field :quantity %>
+
+    <br><br>
+
+    <%= i.label :name %>
+    <%= i.text_field :name%>
+    <br><br>
+  <% end %>
+
+
+
+
+
+  <%= f.submit %>
 <% end %>
