--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,11 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  <%= f.fields_for :ingredients do |i| %>
+   name: <%= i.text_field :name %>
+      qty: <%= i.text_field :quantity %>
+<% end %>
+
+<%= link_to 'add ingredient', recipe %>   
+
+  <%= f.submit %>
 <% end %>
