--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -2,10 +2,10 @@
 <%= form_for recipe do |f| %>
   <p>Title: <%= f.text_field :title %></p>
   <ul>
-    <%= f.fields_for :ingredients do |ingredient| %>
+    <%= f.fields_for :ingredients, [Ingredient.new, Ingredient.new, Ingredient.new, Ingredient.new] do |ingredient_form| %>
     <li>
-      name: <%= ingredient.text_field :name %>
-      qty: <%= ingredient.text_field :quantity %>
+      name: <%= ingredient_form.text_field :name %>
+      qty: <%= ingredient_form.text_field :quantity %>
     </li>
     <% end %>
   </ul>
