--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,14 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+
+  Ingredients: <%= f.fields_for :ingredients do |ingredient| %>
+
+  <%= ingredient.label :quantity %>
+  <%= ingredient.text_field :quantity %>
+
+  <%= ingredient.label :name %>
+  <%= ingredient.text_field :name %>
+  <%end%>
+
+  <%= f.submit %>
 <% end %>
