--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,13 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  <h3>Ingredients</h3>
+  <%= f.fields_for :ingredients do |ingredient| %>
+    <%= ingredient.label :name %>
+    <%= ingredient.text_field :name %>
+    <%= ingredient.label :quantity %>
+    <%= ingredient.text_field :quantity %>
+    <br>
+  <% end %>
+
+<%= f.submit %>
 <% end %>
