--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,7 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Title: <%= f.text_field :title %><br/>
+  <%= f.fields_for :ingredients do |ing| %>
+    Quantity: <%= ing.text_field :quantity %> Name: <%= ing.text_field :name %><br/>
+    <% end %>
+  <%= f.submit "commit" %>
 <% end %>
