--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,14 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Title: <%= f.text_field :title %> <br>
+  <h3>Ingredients</h3>
+  <%= f.fields_for :ingredients do |ingr| %>
+    <%= ingr.label :name %>
+    <%= ingr.text_field :name %>
+    <%= ingr.label :quantity %>
+    <%= ingr.text_field :quantity %> <br> <br>
+  <% end %>
+
+
+
+  <%= f.submit %>
 <% end %>
