--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,14 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  Ingredients:
+
+  <%= f.fields_for :ingredients do |ingredient| %>
+  	<%= ingredient.label :name %>
+  	<%= ingredient.text_field :name %> <br>
+
+  	<%= ingredient.label :qty %>
+  	<%= ingredient.number_field :quantity%>
+  	<% end %>
+
+  	<%= f.submit %>
 <% end %>
