--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,11 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <%=f.label :title, "Title:"%>
+  Title: <%= f.text_field :title %><br/>
+  <%=f.fields_for :ingredients do |ing|%>
+  <%=ing.label :name, "Ingredient Name" %>
+  <%=ing.text_field :name%><br/>
+  <%=ing.label :quantity, "Quantiy" %>
+  <%=ing.text_field :quantity%><br/>
+  <%end%>
+  <%=f.submit%>
 <% end %>
