--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,15 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  <br>
+  Ingredients:
+  <br>
+  <%= f.fields_for :ingredients do |i| %>
+  	<br>
+  	<%= i.label :name %>
+  	<%= i.text_field :name %>
+  	<%= i.label :quantity %>
+  	<%= i.text_field :quantity %>
+  <% end %>
+  <br>
+  <%= f.submit %>
 <% end %>
