--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,14 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Title: <%= f.text_field :title %><br>
+  Ingredients:<br>
+  <%= f.fields_for :ingredients  do |i| %>
+    <%= i.label :name%><br>
+    <%= i.text_field :name%><br>
+
+    <%= i.label :quantity%><br>
+    <%= i.text_field :quantity%><br><br>
+    
+    <% end %>
+  <%= f.submit :"commit" %>
+
 <% end %>
