--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,15 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Title: <%= f.text_field :title %><br />
+  <ul>
+    <%= f.fields_for :ingredients do |i| %>
+    <li>
+      <%= i.label :quantity %>
+      <%= i.text_field :quantity %><br />
+
+      <%= i.label :name %>
+      <%= i.text_field :name %><br />
+    </li>
+    <% end %>
+  </ul>
+  <%= f.submit %>
 <% end %>
