--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,16 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <p>Title:</p> 
+  <%= f.text_field :title %><br />
+  
+  <%= f.fields_for :ingredients_attributes do |i| %>
+  
+    <%= i.label :name %>
+    <%= i.text_field :name %>
+
+    <%= i.label :quantity %>
+    <%= i.text_field :quantity %><br />
+
+  <% end %>
+  
+  <%= f.submit :"commit" %>
 <% end %>
