--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -2,7 +2,7 @@
   <p>Title:</p> 
   <%= f.text_field :title %><br />
   
-  <%= f.fields_for :ingredients_attributes do |i| %>
+  <%= f.fields_for :ingredients do |i| %>
   
     <%= i.label :name %>
     <%= i.text_field :name %>
