--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,10 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  <%= f.fields_for :ingredients do |ingredient| %>
+    <br>ingredient:<br>
+  	name: <%= ingredient.text_field :name %>
+  	quantity: <%= ingredient.text_field :quantity %>
+  	<br>
+  <% end %>
+  <%= f.submit %>
 <% end %>
