--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,17 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+  <%= f.label :title %><br>
+  <%= f.text_field :title %><br><br>
+  Ingredients:
+  <br>
+  <%= f.fields_for :ingredients do |ingredient| %>
+
+    <%= ingredient.label :name %><br>
+    <%= ingredient.text_field :name %><br>
+
+    <%= ingredient.label :quantity %><br>
+    <%= ingredient.text_field :quantity %><br><br>
+
+  <% end %>
+
+  <%= f.submit %>
+<% end %>
