--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,22 @@
-<%= render 'form', recipe: @recipe %>
+
+
+<%= form_for @recipe do |f| %>
+
+  Title: <%= f.text_field :title %><br/>
+
+  <%= f.fields_for :ingredients do |ingredient| %>
+  	Ingredient 
+  	<%= ingredient.label :name %>
+  	<%= ingredient.text_field :name %>
+
+  	<%= ingredient.label :quantity %>
+  	<%= ingredient.text_field :quantity %>
+
+  <% end %>
+  <%= f.submit %>
+<% end %>
+
+
+
+
+
