--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,8 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Title: <%= f.text_field :title %> <br>
+	Ingredients: <%= f.fields_for :ingredients do |ing_form| %> <br>
+		Name: <%= ing_form.text_field :name %>
+		Quantity: <%= ing_form.text_field :quantity %>
+	<% end %>
+	<%= f.submit %>
 <% end %>
