--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -2,9 +2,9 @@
   Title: <%= f.text_field :title %>
   <%= f.fields_for :ingredients do |ingredient| %>
     <%= ingredient.label :name %>
-    <%= ingredient.text_field :name %>
-    <%= ingredient.label :name %>
-    <%= ingredient.text_field :quantity %>
+    <%= ingredient.text_field :name %><br>
+    <%= ingredient.label :quantity %>
+    <%= ingredient.text_field :quantity %><br>
   <% end %>
 
   <%= f.submit %>
