--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,17 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+
+  <%= f.fields_for :ingredients do |ingredient| %>
+    <ul>
+      <li>
+        <%= ingredient.label :name %>
+        <%= ingredient.text_field :name %>
+
+        <%= ingredient.label :quantity %>
+        <%= ingredient.text_field :quantity %>
+      </li>  
+    </ul>  
+  <% end %>
+  
+  <%= f.submit %>  
 <% end %>
