--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,15 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+Title: <%= f.text_field :title %>
+
+<ul>
+  <%= f.fields_for :ingredients do |ingr| %>
+  <li>
+      <%= ingr.label :name %> 
+      <%= ingr.text_field :name %><br />
+      <%= ingr.label :quantity %> 
+      <%= ingr.text_field :quantity %> <br /><br />
+    </li>
+    <% end %> 
+ </ul>  
+  <%= f.submit %>
 <% end %>
