--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,10 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <p>Title: <%= f.text_field :title %></p>
+  <%= f.fields_for :ingredients do |ingr| %>
+  <li>
+    name: <%= ingr.text_field :name %>
+    qty: <%= ingr.text_field :quantity %>
+  </li>
+  <% end %>
+  <%= f.submit %>  
 <% end %>
