--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,13 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+    Ingredients: <%= f.fields_for :ingredients do |ingred| %>
+    <%= ingred.label :ingredient %>
+    <%= ingred.text_field :name%>
+
+    <%= ingred.label :quantity %>
+    <%= ingred.text_field :quantity%>
+
+    <% end %>
+  <%= f.submit %>
+
 <% end %>
