--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,15 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  <ul>
+    <%= f.fields_for :ingredients do |ingredient| %>
+      <li>
+      Name: <%= ingredient.text_field :name %>
+      Quantity: <%= ingredient.text_field :quantity %>
+      </li>
+    <% end %>
+
+  </ul>
+
+  <%= f.submit %>
+
 <% end %>
