--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,10 @@
-<%= render 'form', recipe: @recipe %>
+<h1>New Recipe</h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Back', recipes_path %>
+
+
+
+
+
