--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,9 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  Ingredients:<br>
+  <%= f.fields_for :ingredients do |ing| %>
+    Name: <%= ing.text_field :name %><br>
+    Ammount: <%= ing.text_field :quantity %><br>
+  <% end %>
+  <%= f.submit "Create Recipe" %>
 <% end %>
