--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,8 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Title: <%= f.text_field :title %> <br>
+  <%= f.fields_for :ingredients do |ing| %>
+    Name: <%= ing.text_field :name %>
+    Qty: <%= ing.text_field :quantity %>
+  <% end %>
+  <%= f.submit %>
 <% end %>
