--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,11 @@
-<%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+<%= form_for @recipe do |recipe_builder| %>
+  Title: <%= recipe_builder.text_field :title %> <hr>
+  Ingredients <hr>
+  <%= recipe_builder.fields_for :ingredients do |ingredient_builder| %>
+    <%= ingredient_builder.label :name %>
+    <%= ingredient_builder.text_field :name %> <hr>
+    <%= ingredient_builder.label :quantity %>
+    <%= ingredient_builder.text_field :quantity %> <hr>
+  <% end %>
+  <%= recipe_builder.submit %>
 <% end %>
