--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,13 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <%= f.label :title %>:<br>
+  <%= f.text_field :title %><br><br>
+  <%= f.label :ingredients %>:<br>
+  <%= f.fields_for :ingredients do |ingrd| %>
+    <%= ingrd.label :name %>:
+    <%= ingrd.text_field :name %>
+    <%= ingrd.label :quantity %>:
+    <%= ingrd.text_field :quantity %><br>
+  <% end %>
+  <br>
+  <%= f.submit %>
 <% end %>
