--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,19 @@
-<%= form_for @recipe do |f| %>
+<%= form_for(@recipe) do |f| %>
   Title: <%= f.text_field :title %>
+
+  <%= f.fields_for :ingredients do |ingredient| %>
+    <fieldset>
+      <p>
+        <%= ingredient.label :name %>
+        <%= ingredient.text_field :name %>
+      </p>
+      <p>
+        <%= ingredient.label :quantity %>
+        <%= ingredient.text_field :quantity %>
+      </p>
+    </fieldset>
+  <% end %>
+
+  <%= link_to 'add ingredient', @recipe %>
+  <%= f.submit %>
 <% end %>
