--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,18 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  <ul>
+    <%= f.fields_for :ingredients do |ingredient| %>
+      <li>
+        <%= ingredient.label :quantity %>
+        <%= ingredient.text_field :quantity %>
+      </li>
+
+      <li>
+        <%= ingredient.label :name %>
+        <%= ingredient.text_field :name %>
+      </li>
+    <% end %>
+  </ul>
+
+  <%= f.submit %>
 <% end %>
