--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,13 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <%= f.label :title %>
+  <%= f.text_field :title %> <br> <br>
+
+  <%= f.fields_for :ingredients do |ingredient| %>
+    
+    Ingredient: <%= ingredient.text_field :name %> <br>
+    Quantity: <%= ingredient.text_field :quantity %> <br><br>
+
+  <% end %>
+
+  <%= f.submit %>
 <% end %>
