--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,16 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  <br>
+
+  <%= f.fields_for :ingredients do |ing| %>
+    <%= ing.label :quantity %>
+    <%= ing.text_field :quantity %>
+    <br>
+    <%= ing.label :name %>
+    <%= ing.text_field :name %>
+    <br>
+  <% end %>
+
+  <%= f.submit %>
+
 <% end %>
