--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,16 @@
-<%= render 'form', recipe: @recipe %>
+<%=form_for(@recipe) do |f| %>
+  <h1>RECIPE</h1>
+  <%=f.label :title%>
+  <%=f.text_field :title%><br>
+
+  <h2>INGREDIENTS</h2>
+  <%=f.fields_for :ingredients do |ing| %>
+  <%=ing.label :name%><br>
+  <%=ing.text_field :name%><br>
+  <%=ing.label :quantity%><br>
+  <%=ing.text_field :quantity%><br>
+
+  <% end %>
+
+  <%=f.submit%>
+  <% end %>
