--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,11 @@
-<%= render 'form', recipe: @recipe %>
+<!-- <%= render 'form', recipe: @recipe %> -->
+<%= form_for @recipe do |f| %>
+  Recipe: <%= f.text_field :title %>
+
+  <%= f.fields_for :ingredients do |ingredient| %>
+    Ingredient Name:<%= ingredient.text_field :name %>
+    Ingredient Quantity:<%= ingredient.text_field :quantity%>
+  <% end %>
+
+  <%= f.submit %>
+<% end %>
