--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,22 @@
-<%= render 'form', recipe: @recipe %>
+<h1>Create a Recipe</h1>
+
+<%= form_for(@recipe) do |f| %>
+  <p>
+    <%= f.label :title %>
+    <%= f.text_field :title %>
+  </p>
+  <%= f.fields_for :ingredients do |i| %>
+  <fieldset>
+    <legend>Ingredient 1</legend>
+    <p>
+      <%= i.label :name %>
+      <%= i.text_field :name %>
+    </p>
+    <p>
+      <%= i.label :quantity %>
+      <%= i.text_field :quantity %>
+    </p>
+  </fieldset>
+  <% end %>
+<%= f.submit %>
+<% end %>
