--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,13 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+  Title: <%= f.text_field :title %>
+    <br></br>
+<%= f.fields_for :ingredients do |ing| %>
+
+    Ingredient: <%= ing.text_field :name %>
+    <%= ing.label :quantity %>
+    <%= ing.text_field :quantity %>
+    <br></br>
+
+  <% end %>
+ <%= f.submit %>
+<% end %>
