--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,13 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  <% counter = 0 %>
+  <%= f.fields_for :ingredients do |ing| %>
+    <% counter += 1 %>
+    <li>
+      Ingredient #<%= counter %><br>
+      Name: <%= ing.text_field :name %>
+      Quanitity: <%= ing.text_field :quantity %><br>
+    </li>
+  <% end %>
+  <%= f.submit %>
 <% end %>
