--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,21 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <%=f.label(:title)%>
+  <%= f.text_field :title %><br>
+  <br>
+
+  <%=f.label(:ingredients)%>
+  <ul>
+    <%=f.fields_for(:ingredients) do |ing|%>
+    <li>
+      <%=ing.label(:quantity)%>
+      <%=ing.text_field(:quantity)%><br>
+
+      <%=ing.label(:name)%>
+      <%=ing.text_field(:name)%><br>
+      <br>
+    </li>
+    <%end%>
+  </ul>
+
+  <%=f.submit%>
 <% end %>
