--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,12 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <p>Title: <%= f.text_field :title %></p>
+
+  <%= f.fields_for :ingredients do |ingredient| %>
+    <p><%= ingredient.label :name %>
+    <%= ingredient.text_field :name %></p>
+    <p><%= ingredient.label :quantity %>
+    <%= ingredient.text_field :quantity %></p>
+  <% end %>
+
+  <%= f.submit %>
 <% end %>
