--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,11 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Title: <%= f.text_field :title %><br />
+  Ingredients:
+  <%= f.fields_for :ingredients do |ingredient| %><br />
+    <%= ingredient.label :name %>
+    <%= ingredient.text_field :name %><br />
+    <%= ingredient.label :quantity %>
+    <%= ingredient.text_field :quantity %><br />
+  <% end %><br />
+  <%= f.submit %>
 <% end %>
