--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,11 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  <%=f.fields_for :ingredients do |ingr| %>
+    <%= ingr.label :quantity %>
+    <%= ingr.text_field :quantity %>
+    <%= ingr.label :name %>
+    <%= ingr.text_field :name %>
+
+  <%end%>
+  <%= f.submit %>
 <% end %>
