--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,13 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  <ul>
+  <%= f.fields_for :ingredients do |i| %>
+    <li>
+    name: <%= i.text_field :name %>
+    quantity: <%= i.text_field :quantity %>
+    </li>
+  <% end %>
+  </ul>
+
+  <%= f.submit %>
 <% end %>
