--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,12 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  
+  Recipe Title: <%= f.text_field :title %><br>
+
+  <%= f.fields_for :ingredients do |ing| %>
+    Name: <%= ing.text_field :name %>
+    Quantity: <%= ing.text_field :quantity %><br>
+
+  <% end %>
+  
+<%= f.submit %>
 <% end %>
