--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,16 @@
+<h3>New Recipe</h3>
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <%= f.label :title %>
+  <%= f.text_field :title %>
+
+  <%= f.fields_for :ingredients do |ingr| %>
+    <p><b>Ingredient <%= ingr.index + 1 %></b></p>
+    <%= ingr.label :name %>
+    <%= ingr.text_field :name %> <br><br>
+
+    <%= ingr.label :quantity %>
+    <%= ingr.text_field :quantity %> <br><br>
+  <% end %>
+
+  <%= f.submit %>
 <% end %>
