--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,17 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+	<%= f.label :title %>
+  	<%= f.text_field :title %>
+
+	  	<%= f.fields_for :ingredients do |ingredient_builder| %>
+	  	<%= ingredient_builder.label :name %>
+	  	<%= ingredient_builder.text_field :name %>
+
+	  	<p></p>
+
+	  	<%= ingredient_builder.label :quantity %>
+	  	<%= ingredient_builder.text_field :quantity %>
+
+  	<%end %>
+    
+    <%= f.submit %>
 <% end %>
