--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,14 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <%= f.label :title %>
+  <%= f.text_field :title %><br>
+
+  <%= f.fields_for :ingredients do |bam| %>
+    <%= bam.label :name %>
+    <%= bam.text_field :name %><br>
+ 
+    <%= bam.label :quantity %>
+    <%= bam.text_field :quantity %><br>
+  <% end %>
+
+  <%= f.submit %>
 <% end %>
