--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,16 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  <br>
+  <h2>Ingredients:</h2>
+  <%= f.fields_for :ingredients do |ingredient| %>
+  	<% field_set_tag "Ingredient" do |f| %>
+  	<%= ingredient.label :name %>
+  	<%= ingredient.text_field :name %>
+	<br>
+  	<%= ingredient.label :quantity %>
+	<%= ingredient.text_field :quantity %>
+	<br>
+	<% end %>
+  <% end %> 	
+  <%= f.submit %>
 <% end %>
