--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,21 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+
+  <%= f.fields_for :ingredients do |ingr| %>
+    <fieldset>
+      <legend>New Ingredient</legend>
+
+      <p>
+        <%= ingr.label :name %>
+        <%= ingr.text_field :name %>
+      </p>
+
+      <p>
+        <%= ingr.label :quantity %>
+        <%= ingr.number_field :quantity %>
+      </p>
+    </fieldset>
+  <% end %>
+
+  <%= f.submit %>
 <% end %>
