--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,11 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+  Title: <%= f.text_field :title %><br>
+  <%= f.fields_for :ingredients do |i| %>
+		<%= i.label :name %><br>
+		<%= i.text_field :name %><br>
+
+		<%= i.label :quantity %><br>
+		<%= i.text_field :quantity %><br>
+  <% end %>
+  <%= f.submit %>
+<% end %>
