--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,12 @@
-<%= render 'form', recipe: @recipe %>
+
+
+<%= form_for @recipe do |f| %>
+  <%= f.text_field :title %><br>
+
+  <%= f.fields_for :ingredients do |i| %>
+    <%= i.text_field :name %>
+    <%= i.text_field :quantity %>
+  <% end %>  
+  <%= link_to 'add_ingredient', @recipe %>
+  <%= f.submit %>
+<% end %>  
