--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,13 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+  <h3>Title: <%= f.text_field :title %></h3>
+    <ul>
+      <li>
+        <%= f.fields_for :ingredients do |ingr| %>
+          Name: <%= ingr.text_field :name %>
+          Qty: <%= ingr.text_field :quantity %>
+      <li>
+        <%= link_to "Recipe", @recipe %>
+      <% end %>
+    </ul>
+    <%= f.submit %>
+<% end %>
