--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,24 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+
+  <%= f.fields_for :ingredients do |ing| %>
+    <%= ing.label :name %>
+    <%= ing.text_field :name %>
+
+    <%= ing.label :quantity %>
+    <%= ing.text_field :quantity %>
+  <% end %>
+
+  <%= f.submit %>
 <% end %>
+
+<!--
+:recipe => {
+  :title => "Title"
+  :ingredients_attributes => {
+    "0" => {
+      :name => "Name"
+      :quantity => "quantity"
+    }
+  }
+}
