--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,12 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+  Title: <%= f.text_field :title %>
+  <%= f.fields_for :ingredients do |i| %>
+    <%= i.label :quantity %>
+    <%= i.text_field :quantity %><br>
+
+    <%= i.label :name %>
+    <%= i.text_field :name %><br>
+    <%end %>
+
+  <%= f.submit %>
+<% end %>
