--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,11 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
-<% end %>
+  <%= f.fields_for :ingredients do |ing| %>
+   <%= ing.label :quantity %><br>
+   <%= ing.text_field :quantity %><br>
+   <%= ing.label :name %><br>
+   <%= ing.text_field :name %><br>
+  <% end %>
+    <%= f.submit %>
+
+  <% end %>
