--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,15 +1,21 @@
 <%= form_for @recipe do |f| %>
+
+<h1>New Recipe</h1>
 	<%= f.label :title %>
   	<%= f.text_field :title %>
 
 	  	<%= f.fields_for :ingredients do |ingredient_builder| %>
+	  	<p>
+
 	  	<%= ingredient_builder.label :name %>
 	  	<%= ingredient_builder.text_field :name %>
+	  	</p>
 
-	  	<p></p>
-
+	  	<p>
 	  	<%= ingredient_builder.label :quantity %>
 	  	<%= ingredient_builder.text_field :quantity %>
+	  	</p>
+
 
   	<%end %>
     
