--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,14 +1,16 @@
-
 <%= form_for @recipe do |f| %>
-  <p>Title: <%= f.text_field :title %></p>
-  <ul>
-    <%= f.fields_for :ingredients do |ingredient| %>
-    <li>
-      name: <%= ingredient.text_field :name %>
-      qty: <%= ingredient.text_field :quantity %>
-    </li>
-    <% end %>
-    <%= link_to 'add ingredient', @recipe %>
-  </ul>
-  <%= f.submit %>
+	
+	<%= f.label :title %>
+	<%= f.text_field :title %>
+
+	<%= f.fields_for :ingredients do |ing| %>
+		<%= ing.label :name %>
+		<%= ing.text_field :name %>
+
+		<%= ing.label :quantity %>
+		<%= ing.text_field :quantity %>
+	<% end %>
+
+	<%= f.submit %>
+
 <% end %>
