--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -2,8 +2,4 @@
 
 <h3>Ingredients</h2>
 
-<ul>
-<% @recipe.ingredients.each do |ingredient| %>
-  <li><%= "#{ingredient.name} X #{ingredient.quantity}" %></li>
-<% end %>
-</ul>
+<%= render "form", recipe: @recipe %>
