--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,15 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+  <h2><%= f.label :recipe_title %></h2>
+  <%= f.text_field :title %>
+  <br><br>
+  <h2>Ingredients</h2>
+  <%= f.fields_for :ingredients do |ing| %>
+    <%= ing.label :name %>
+    <%= ing.text_field :name %>
+
+    <%= ing.label :quantity %>
+    <%= ing.text_field :quantity %>
+    <br><br>
+  <% end %>
+<%= f.submit %>
+<% end %>
