--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -6,5 +6,6 @@
   <%= ingred.label :quantity %>
   <%= ingred.text_field :quantity %><br>
   <% end %>
+  <%= link_to "add ingredient", @recipe %>
   <%= f.submit %>
 <% end %>
