--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,9 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+  Title: <%= f.text_field :title %>
+  Ingredients:<br>
+  <%= f.fields_for :ingredients do |ingr| %>
+    <br>Name: <%= ingr.text_field :name %><br>
+    QTY: <%= ingr.text_field :quantity %><br>
+  <% end %>
+  <%= f.submit %>
+<% end %>
