--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,14 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+  Title: <%= f.text_field :title %><br>
+  
+   <%= f.fields_for :ingredients do |ing| %>
+
+   Quantity: <%= ing.text_field :quantity %><br>
+    
+   Name: <%= ing.text_field :name %><br>
+ 
+    <% end %>
+    <%= f.submit %>
+<% end %>
+
+
