--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,13 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+  <p> Title: <%= f.text_field :title %> </p>
+  <ul>Ingredients:
+  		<%= f.fields_for :ingredients do |ingredient| %>
+  		<li>
+  			name: <%= ingredient.text_field :name %>
+  			quantity: <%= ingredient.text_field :quantity %>
+  		</li>
+  		<% end %>
+  		<%= link_to 'add ingredient', @recipe %>
+	  </ul>	
+	  <%= f.submit %>	
+<% end %>
