--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,13 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <p> Title: <%= f.text_field :title %> </p>
+  <ul>Ingredients:
+  		<%= fields_for :ingredients do |ingredient| %>
+  		<li>
+  			name: <%= ingredient.text_field :name%>
+  			quantity: <%= ingredient.text_field :quantity %>
+  		</li>
+  		<% end %>
+  		<%= link_to 'add ingredient', @recipe_new %>
+	  </ul>	
+	  <%= f.submit %>	
 <% end %>
