--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,28 @@
+<h1>New Recipe</h1>
+
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <p>
+    <%= f.label :title %>
+    <%= f.text_field :title %>
+  </p>
+
+  <h3>Ingredients</h3>
+  <p>
+    <label for="name">Name:</label>
+    <input type="text" name="recipe[ingredients_attributes][][name]" value="">
+  </p>
+  <p>
+    <label for="name">Quantity:</label>
+    <input type="text" name="recipe[ingredients_attributes][][quantity]" value="">
+  </p>
+  <p>
+    <label for="name">Name:</label>
+    <input type="text" name="recipe[ingredients_attributes][][name]" value="">
+  </p>
+  <p>
+    <label for="name">Quantity:</label>
+    <input type="text" name="recipe[ingredients_attributes][][quantity]" value="">
+  </p>
+
+  <%= f.submit "Create Recipe" %>
 <% end %>
